tests/valid/noEnumMerging.ts
// @ts-nocheck
const Direction = {
	Up: "UP",
	Down: "DOWN",
} as const;
