tests/invalid/noEnumMerging.ts
// @ts-nocheck
enum Direction {
	Up = "UP",
	Down = "DOWN",
}
